--- a/deployment.yml
+++ b/deployment.yml
@@ -15,9 +15,9 @@ spec:
     spec:
       containers:
       - name: tetris
-        image: bharath0812/nodejs:6.0
+        image: bharath0812/bank:1.0
         ports:
-        - containerPort: 3000  # Use port 3000
+        - containerPort: 8081  # Use port 3000
 
 ---
 apiVersion: v1
@@ -30,5 +30,5 @@ spec:
   ports:
   - protocol: TCP
     port: 80                 # Expose port 80
-    targetPort: 3000
+    targetPort: 8081
   type: LoadBalancer
