--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,34 +1,35 @@
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: tetris
+ name: mavenwebappdeployment
 spec:
-  replicas: 2
-  selector:
-    matchLabels:
-      app: tetris
-  template:
-    metadata:
-      labels:
-        app: tetris
-    spec:
-      containers:
-      - name: tetris
-        image: bharath0812/java:2.0
-        ports:
-        - containerPort: 8080  # Use port 3000
-
+ replicas: 2
+ strategy: 
+    type: Recreate
+ selector: 
+   matchLabels: 
+     app: mavenwebapp
+ template:
+  metadata:
+   name: mavenwebapppod
+   labels:
+     app: mavenwebapp	 
+  spec: 
+    containers:
+    - name: mavenwebapp
+      image: bharath0812/java:2.0
+      ports:
+      - containerPort: 8080
 ---
 apiVersion: v1
 kind: Service
 metadata:
-  name: tetris-service
+ name: mavenwebappsvc
 spec:
-  selector:
-    app: tetris
-  ports:
-  - protocol: TCP
-    port: 80                 # Expose port 80
-    targetPort: 8080
   type: LoadBalancer
+  selector:
+   app: mavenwebapp
+  ports:
+   - port: 80
+     targetPort: 8080
+
