--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -17,9 +17,9 @@ spec:
   spec: 
     containers:
     - name: mavenwebapp
-      image: bharath0812/java:2.0
+      image: nginx
       ports:
-      - containerPort: 8080
+      - containerPort: 80
 ---
 apiVersion: v1
 kind: Service
@@ -31,5 +31,5 @@ spec:
    app: mavenwebapp
   ports:
    - port: 80
-     targetPort: 8080
+     targetPort: 80
 
