--- a/k8s/deploy.yaml
+++ b/k8s/deploy.yaml
@@ -1,34 +1,36 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
- name: mavenwebappdeployment
+  name: nginx-deployment
+  namespace: test
+  labels:
+    app: nginx
 spec:
- replicas: 2
- strategy: 
-    type: Recreate
- selector: 
-   matchLabels: 
-     app: mavenwebapp
- template:
-  metadata:
-   name: mavenwebapppod
-   labels:
-     app: mavenwebapp	 
-  spec: 
-    containers:
-    - name: mavenwebapp
-      image: nginx
-      ports:
-      - containerPort: 80
+  replicas: 3
+  selector:
+    matchLabels:
+      app: nginx
+  template:
+    metadata:
+      labels:
+        app: nginx
+    spec:
+      containers:
+      - name: nginx
+        image: nginx:1.14.2
+        ports:
+        - containerPort: 80
+
 ---
 apiVersion: v1
 kind: Service
 metadata:
  name: mavenwebappsvc
+ namespace: test
 spec:
   type: LoadBalancer
   selector:
-   app: mavenwebapp
+   app: nginx
   ports:
    - port: 80
      targetPort: 80
